<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingHorizontal="@dimen/dimen_24dp">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/loginButtonView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/subtitileView"
                android:layout_width="@dimen/match_constraints"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_24dp"
                android:text="@string/login_to_continue"
                android:textSize="@dimen/dimen_24sp"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailInputLayoutView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Style.TextInputLayoutRounded"
                android:layout_marginTop="@dimen/dimen_24dp"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/subtitileView">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailInputView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Adicione o campo de senha -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordInputLayoutView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Style.TextInputLayoutRounded"
                android:layout_marginTop="@dimen/dimen_12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:passwordToggleDrawable="@drawable/show_password_selector"
                app:layout_constraintTop_toBottomOf="@id/emailInputLayoutView"
                app:passwordToggleEnabled="true"
                android:textColor="@color/black"
                app:errorIconDrawable="@null"
                app:layout_constraintWidth_percent="0.8">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordInputView"
                    android:layout_width="match_parent"
                    android:textColor="@color/black"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:layout_width="@dimen/match_constraints"
                android:layout_height="@dimen/dimen_01dp"
                android:background="@color/black"
                android:layout_marginHorizontal="@dimen/dimen_06dp"
                app:layout_constraintEnd_toStartOf="@id/orView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/orView"
                app:layout_constraintTop_toTopOf="@id/orView"/>

            <View
                android:layout_width="@dimen/match_constraints"
                android:layout_height="@dimen/dimen_01dp"
                android:background="@color/black"
                android:layout_marginHorizontal="@dimen/dimen_06dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/orView"
                app:layout_constraintBottom_toBottomOf="@id/orView"
                app:layout_constraintTop_toTopOf="@id/orView"/>

            <TextView
                android:id="@+id/orView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_12dp"
                android:text="@string/our"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/forgotPasswordView" />

            <!-- Texto "Esqueceu a senha?" -->
            <TextView
                android:id="@+id/forgotPasswordView"
                android:layout_width="wrap_content"
                android:padding="@dimen/dimen_12dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/dimen_12dp"
                android:text="@string/forgot_password"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passwordInputLayoutView" />

            <TextView
                android:id="@+id/registerButtonView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/dimen_12dp"
                android:padding="@dimen/dimen_12dp"
                android:textColor="@color/black"
                android:text="@string/has_no_record"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/orView" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/loadingView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/black"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginButtonView"
        android:layout_width="match_parent"
        style="@style/Style.Button.Black"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/dimen_16dp"
        android:enabled="false"
        android:text="@string/enter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
